WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71117
[Qt] REGRESSION: 5 editing tests fail
https://bugs.webkit.org/show_bug.cgi?id=71117
Summary
[Qt] REGRESSION: 5 editing tests fail
Csaba Osztrogonác
Reported
2011-10-28 06:52:04 PDT
After Qt5 updating on the WK2 bot, there are 5 new failing test: editing/deleting/merge-paragraph-from-p-with-style-2.html editing/deleting/merge-paragraph-from-p-with-style-3.html editing/deleting/merge-paragraph-into-h1-with-dir-2.html editing/deleting/merge-paragraph-into-h1-with-dir.html editing/deleting/merge-paragraph-from-h6-with-style-2.html Qt5 version before updating:
https://lists.webkit.org/pipermail/webkit-qt/2011-October/002035.html
Qt5 version after updating:
https://lists.webkit.org/pipermail/webkit-qt/2011-October/002053.html
It might be regression come from Qt5 update or might be a regression come from WebKit trunk between 98716-98723. I tested them with Qt5 and QtWebKit - WebKit1 and all of them passed. So it is a Qt5 and WK2 related bug.
Attachments
[Qt] REGRESSION: 5 editing tests fail
(3.58 KB, patch)
2011-11-02 10:19 PDT
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2011-10-28 06:52:59 PDT
(In reply to
comment #0
)
> It might be regression come from Qt5 update or might be a regression come from WebKit > trunk between 98716-98723. I tested them with Qt5 and QtWebKit - WebKit1 and all of > them passed. So it is a Qt5 and WK2 related bug.
These tests fail on 98716 too, so it is a Qt5 regression.
Csaba Osztrogonác
Comment 2
2011-10-28 06:55:33 PDT
Here are the diffs: --- /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/editing/deleting/merge-paragraph-from-p-with-style-2-expected.txt +++ /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/editing/deleting/merge-paragraph-from-p-with-style-2-actual.txt @@ -1,12 +1,9 @@ -EDITING DELEGATE: shouldBeginEditingInDOMRange:range from 0 of DIV > BODY > HTML > #document to 5 of DIV > BODY > HTML > #document -EDITING DELEGATE: webViewDidBeginEditing:WebViewDidBeginEditingNotification EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: shouldDeleteDOMRange:range from 5 of #text > H1 > DIV > BODY > HTML > #document to 0 of P > DIV > BODY > HTML > #document EDITING DELEGATE: shouldChangeSelectedDOMRange:range from 2 of DIV > BODY > HTML > #document to 2 of DIV > BODY > HTML > #document toDOMRange:range from 5 of #text > H1 > DIV > BODY > HTML > #document to 5 of #text > H1 > DIV > BODY > HTML > #document affinity:NSSelectionAffinityDownstream stillSelecting:FALSE EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: webViewDidChange:WebViewDidChangeNotification -EDITING DELEGATE: webViewDidEndEditing:WebViewDidEndEditingNotification This tests deleting line break before p. WebKit should not keep the style of p added by a style rule, and "world" should be italic and not be in red. | " --- /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/editing/deleting/merge-paragraph-from-p-with-style-3-expected.txt +++ /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/editing/deleting/merge-paragraph-from-p-with-style-3-actual.txt @@ -1,12 +1,9 @@ -EDITING DELEGATE: shouldBeginEditingInDOMRange:range from 0 of DIV > BODY > HTML > #document to 5 of DIV > BODY > HTML > #document -EDITING DELEGATE: webViewDidBeginEditing:WebViewDidBeginEditingNotification EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: shouldDeleteDOMRange:range from 5 of #text > H1 > DIV > BODY > HTML > #document to 0 of P > DIV > BODY > HTML > #document EDITING DELEGATE: shouldChangeSelectedDOMRange:range from 2 of DIV > BODY > HTML > #document to 2 of DIV > BODY > HTML > #document toDOMRange:range from 5 of #text > H1 > DIV > BODY > HTML > #document to 5 of #text > H1 > DIV > BODY > HTML > #document affinity:NSSelectionAffinityDownstream stillSelecting:FALSE EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: webViewDidChange:WebViewDidChangeNotification -EDITING DELEGATE: webViewDidEndEditing:WebViewDidEndEditingNotification This tests deleting line break before p. WebKit preserves the inline style of the merged paragraph, and "world" should be in green. | " --- /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/editing/deleting/merge-paragraph-into-h1-with-dir-2-expected.txt +++ /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/editing/deleting/merge-paragraph-into-h1-with-dir-2-actual.txt @@ -1,12 +1,9 @@ -EDITING DELEGATE: shouldBeginEditingInDOMRange:range from 0 of DIV > BODY > HTML > #document to 5 of DIV > BODY > HTML > #document -EDITING DELEGATE: webViewDidBeginEditing:WebViewDidBeginEditingNotification EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: shouldDeleteDOMRange:range from 5 of #text > H1 > DIV > BODY > HTML > #document to 0 of P > DIV > BODY > HTML > #document EDITING DELEGATE: shouldChangeSelectedDOMRange:range from 2 of DIV > BODY > HTML > #document to 2 of DIV > BODY > HTML > #document toDOMRange:range from 5 of #text > H1 > DIV > BODY > HTML > #document to 5 of #text > H1 > DIV > BODY > HTML > #document affinity:NSSelectionAffinityDownstream stillSelecting:FALSE EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: webViewDidChange:WebViewDidChangeNotification -EDITING DELEGATE: webViewDidEndEditing:WebViewDidEndEditingNotification This tests deleting line break after h1 inside a block with dir attribute. WebKit should not add direction or unicode-bidi properties while merging paragraphs. | " --- /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/editing/deleting/merge-paragraph-into-h1-with-dir-expected.txt +++ /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/editing/deleting/merge-paragraph-into-h1-with-dir-actual.txt @@ -1,12 +1,9 @@ -EDITING DELEGATE: shouldBeginEditingInDOMRange:range from 0 of DIV > BODY > HTML > #document to 5 of DIV > BODY > HTML > #document -EDITING DELEGATE: webViewDidBeginEditing:WebViewDidBeginEditingNotification EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: shouldDeleteDOMRange:range from 5 of #text > H1 > DIV > BODY > HTML > #document to 0 of P > DIV > BODY > HTML > #document EDITING DELEGATE: shouldChangeSelectedDOMRange:range from 2 of DIV > BODY > HTML > #document to 2 of DIV > BODY > HTML > #document toDOMRange:range from 5 of #text > H1 > DIV > BODY > HTML > #document to 5 of #text > H1 > DIV > BODY > HTML > #document affinity:NSSelectionAffinityDownstream stillSelecting:FALSE EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: webViewDidChange:WebViewDidChangeNotification -EDITING DELEGATE: webViewDidEndEditing:WebViewDidEndEditingNotification This tests deleting line break after h1 inside a block with dir attribute. WebKit should not add direction or unicode-bidi properties while merging paragraphs. | " --- /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/editing/deleting/merge-paragraph-from-h6-with-style-2-expected.txt +++ /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/editing/deleting/merge-paragraph-from-h6-with-style-2-actual.txt @@ -1,12 +1,9 @@ -EDITING DELEGATE: shouldBeginEditingInDOMRange:range from 0 of DIV > BODY > HTML > #document to 5 of DIV > BODY > HTML > #document -EDITING DELEGATE: webViewDidBeginEditing:WebViewDidBeginEditingNotification EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: shouldDeleteDOMRange:range from 1 of #text > DIV > BODY > HTML > #document to 0 of H6 > DIV > BODY > HTML > #document EDITING DELEGATE: shouldChangeSelectedDOMRange:range from 5 of #text > EM > DIV > BODY > HTML > #document to 5 of #text > EM > DIV > BODY > HTML > #document toDOMRange:range from 5 of #text > EM > DIV > BODY > HTML > #document to 5 of #text > EM > DIV > BODY > HTML > #document affinity:NSSelectionAffinityDownstream stillSelecting:FALSE EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification EDITING DELEGATE: webViewDidChange:WebViewDidChangeNotification -EDITING DELEGATE: webViewDidEndEditing:WebViewDidEndEditingNotification This tests deleting line break before h6. WebKit should not cancel styles added by h6 by those of document's default style but still keep "hello" italicized and "world" in red. | "
Simon Hausmann
Comment 3
2011-10-28 07:36:43 PDT
I suspect that this is related to focus handling. It seems to me that didBeginEditing is called when the focus is transferred to an editable element. It could be that something changed with the focus handling in Qt not causing the view/widget to receive the focus the way it did before.
Csaba Osztrogonác
Comment 4
2011-10-28 07:44:02 PDT
I skipped them to make bot happier :
http://trac.webkit.org/changeset/98726
Simon Hausmann
Comment 5
2011-11-02 10:19:32 PDT
Created
attachment 113328
[details]
[Qt] REGRESSION: 5 editing tests fail
Andreas Kling
Comment 6
2011-11-02 10:58:53 PDT
Comment on
attachment 113328
[details]
[Qt] REGRESSION: 5 editing tests fail r=me
Simon Hausmann
Comment 7
2011-11-02 11:09:49 PDT
Comment on
attachment 113328
[details]
[Qt] REGRESSION: 5 editing tests fail Clearing flags on attachment: 113328 Committed
r99081
: <
http://trac.webkit.org/changeset/99081
>
Simon Hausmann
Comment 8
2011-11-02 11:09:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug