third_party/WebKit/Tools/WebKitTestRunner/qt/PlatformWebViewQt.cpp
@@ -33,6 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <QApplication>
 #include <QDeclarativeProperty>
 #include <QQuickView>
+#include <qwindowsysteminterface_qpa.h>
 
 namespace WTR {
 
@@ -58,9 +59,8 @@ private slots:
         m_view->setParentItem(rootObject());
         QDeclarativeProperty::write(m_view, "anchors.fill", qVariantFromValue(rootObject()));
 
-        QFocusEvent ev(QEvent::WindowActivate);
-        QApplication::sendEvent(m_view, &ev);
-        m_view->setFocus(Qt::OtherFocusReason);
+        QWindowSystemInterface::handleWindowActivated(this);
+        m_view->setFocus(true);
     }
 
 private:
